Closed
Bug 257209
Opened 21 years ago
Closed 21 years ago
nsAutoCompleteController leaks nsGlobalHistory
Categories
(Firefox :: Address Bar, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: dbaron)
Details
(Keywords: fixed-aviary1.0, memory-leak, Whiteboard: [patch])
Attachments
(1 file)
|
1.41 KB,
patch
|
bryner
:
review+
bryner
:
superreview+
asa
:
approval-aviary+
|
Details | Diff | Splinter Review |
nsAutoCompleteController leaks nsGlobalHistory (a service, so it's not serious)
by doing CallGetService and not releasing the result.
| Assignee | ||
Comment 1•21 years ago
|
||
| Assignee | ||
Comment 2•21 years ago
|
||
Oh, steps to reproduce were either Ctrl-L or File| Open Location (and then exit).
| Assignee | ||
Updated•21 years ago
|
Attachment #157232 -
Flags: superreview?(bryner)
Attachment #157232 -
Flags: review?(bryner)
| Assignee | ||
Updated•21 years ago
|
Whiteboard: [patch]
Updated•21 years ago
|
Attachment #157232 -
Flags: superreview?(bryner)
Attachment #157232 -
Flags: superreview+
Attachment #157232 -
Flags: review?(bryner)
Attachment #157232 -
Flags: review+
| Assignee | ||
Comment 3•21 years ago
|
||
Fix checked in to trunk, 2004-09-01 17:39 -0700.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•21 years ago
|
Attachment #157232 -
Flags: approval-aviary?
Comment 4•21 years ago
|
||
Comment on attachment 157232 [details] [diff] [review]
patch
a=asa for branch checkin.
Attachment #157232 -
Flags: approval-aviary? → approval-aviary+
| Assignee | ||
Comment 5•21 years ago
|
||
Fix checked in to AVIARY_1_0_20040515_BRANCH, 2004-09-14 13:47 -0700.
Keywords: fixed-aviary1.0
You need to log in
before you can comment on or make changes to this bug.
Description
•