Fix leak of global history service.  b=257209  r+sr=bryner